# rawProject

./: CMakeLists.txt  README.md
include/Book/: Application.hpp  Button.hpp  Component.hpp  MusicPlayer.hpp  Player.hpp  ResourceIdentifiers.hpp  SoundPlayer.hpp  State.hpp  StateIdentifiers.hpp  TitleState.hpp
src/: Application.cpp  Button.cpp  Component.cpp  Container.cpp  MusicPlayer.cpp  Player.cpp  SoundPlayer.cpp  TitleState.cpp
